Premier push de fin de projet
Premier push de fin de projet contenant quelques résumés du travail accompli le 11 Janvier, quelques retours sur la semaine et divers fichiers (Business Model, mise à jour du poster...).

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -224,12 +224,14 @@
           </ul>
         </ul>
 
-        <h3>Business Model : <i>(A développer)</i></h3>
+        <h3>Business Model</h3>
         <ul>
           <li>Vente de livre retraçant le voyage</li>
           <li>Vente d’objet lié aux voyages (lien affilié)</li>
           <li>Compte premium</li>
         </ul>
+        <p><a href="./img/BusinessModel.pdf" target="_blank">Dossier concernant le Business Model</a></p>
+
 
       </div>
     </div>
@@ -416,9 +418,75 @@
               Pour finir j’ai commencé la réalisation d'un dossier pour recouper toutes les informations concernant le projet.
             </p>
           </ul>
+          <h3>Vendredi 11 Janvier 2019</h3>
+          <ul>
+            <li><b>Lucas Duval</b></li>
+            <ul>
+              <p>
+                Aujourd’hui, j’ai fini l’écriture du <a href="./img/BusinessModel.pdf" target="_blank">business model</a>, réfléchis à toutes les options de rémunération et de minimisation de déficits. J’ai soutenu Steven sur le motion design pour qu’il puisse avoir un avis neuf sur la vidéo promotionnelle.<br>
+                J’ai également corrigé chaque fautes d’orthographe des maquettes pour y avoir un côté professionnel.
+              </p>
+            </ul>
+            <li><b>Pierre Moinet</b></li>
+            <ul>
+              <p>
+                <i>En attente</i>
+              </p>
+            </ul>
+            <li><b>Adrien Sanuy-Muñoz</b></li>
+            <ul>
+              <p>
+                J’ai fini l’application Web et commencer le début de la publicité(<a href="https://youtu.be/8t_9pmHAjg4" alt="">YouTube</a>).Ensuite j’ai donner mon travail à Steven pour qu’il puisse continuer.<br>
+                J’ai ensuite réalisé un tutoriel (<a href="https://youtu.be/_NNVWO68RCg" alt="">YouTube</a>)pour le logiciel Xd d’adobe pour faire comprendre comment j’ai réalisé les maquettes.
+              </p>
+            </ul>
+            <li><b>Steven Roussel</b></li>
+            <ul>
+              <p>
+                Aujourd’hui j’ai finalisé le dossier de <a href="./img/BusinessModel.pdf" target="_blank">“Business Model”</a> avec Lucas et j’ai mis en page celui-ci.<br>
+                J’ai également édité l’infographie afin qu’elle correspond aux derniers chiffres concernant le projet.<br>
+                J’ai réalisé la publicité (Motion et Montage [<a href="https://youtu.be/8t_9pmHAjg4" alt="">YouTube</a>]) ainsi que le montage du tutoriel (<a href="https://youtu.be/_NNVWO68RCg" alt="">YouTube</a>) qu’Adrien m’a envoyé.<br>
+                Pour finir, je mets à jour ce site avec les retours de chacun.
+              </p>
+            </ul>
       </div>
     </div>
   </div>
+
+  <div class="row center-xs">
+    <div class="col-xs-12 col-sm-8">
+      <div class="box">
+        <h2>Retour sur la Semaine</h2>
+
+        <ul>
+          <li><b>Lucas Duval</b></li>
+          <ul>
+            <p>
+              Ce projet fut très intense, nous avons réalisé l’équivalent de 2 voir 3 semaines de travail en 5 jours chrono. Ce fut fatiguant, mais cela nous a montré à quel point nous pouvions être efficace, aussi bien sur le profil personnel que sur le profil collectif. En équipe de 4, nous avons pu couvrir tous les domaines ou presque de la création d’une application web, de la conception à la production. Tout autant sur l’aspect humain, communication, budgétaire, graphique que développement (Back et Front).<br>
+              Je pense pouvoir affirmer que nous sommes tous très fier de ce que l’on a produit.<br>
+              Ce travail n’était pas un simple projet scolaire, mais réellement un travail approfondi, avec le fruit de réflexion de 4 cerveaux d’étudiants dans le multimédia.<br>
+            </p>
+          </ul>
+          <li><b>Pierre Moinet</b></li>
+          <ul>
+            <p>
+              <i>En attente</i>
+            </p>
+          </ul>
+          <li><b>Adrien Sanuy-Muñoz</b></li>
+          <ul>
+            <p>
+              J’ai apprécié travailler avec cette équipe car elle est dynamique et n’a pas peur de rendre un produit complexe et design. Chacun de nous avait un poste attribué et tout s’est bien passé. Ce que je trouve dommage c’est d’avoir réaliser ce projet en 1 semaine avec énormément de demandes. J’aurai préféré le réaliser en 2, 3 semaines pour ne pas rendre un travail non aboutie.<br>
+              En soit le projet m’a beaucoup plus. Il y a de la recherche derrière tout ça et ce n’est pas qu’une simple application qu’un professeur nous à demander de faire. C’est une innovation !
+            </p>
+          </ul>
+          <li><b>Steven Roussel</b></li>
+          <ul>
+            <p>
+              <i>En attente</i>
+            </p>
+          </ul>
+        </ul>
 
   <div class="row center-xs">
     <div class="col-xs-12 col-sm-8">
@@ -429,6 +497,9 @@
         <ul>
           <li><a href="https://xd.adobe.com/spec/53e1fa60-6367-43de-5501-92cc749a7175-25d0/" target="_blank">Maquette</a></li>
           <li><a href="https://geotripapp.herokuapp.com" target="_blank">Site Internet</a></li>
+          <li><a href="https://github.com/Pir42/projectut" target="_blank">GitHub de ce site</a></li>
+          <li><i>Le GitHub du site n'est pas disponible car celui-ci contient des Token d'API privés</i></li>
+
         </ul>
         <h3>Les Affiches</h3>
         <ul>
@@ -439,6 +510,7 @@
         <ul>
           <li><a href="https://docs.google.com/spreadsheets/d/17p14gZcdUPcXGwXmsB4prOhzcHlqXNzuvCngGHwsk2o/edit?usp=sharing" target="_blank">Macro-planning</a></li>
           <li><a href="./img/logo.png" target="_blank">Logo</a></li>
+          <li><a href="./img/BusinessModel.pdf" target="_blank">Business Model</a></li>
           <li><a href="https://www.instagram.com/mxhpics" target="_blank">Instagram Maxime Horlaville</a></li>
         </ul>
 
