Résumé du 11 Janvier
Cf. ancien push.
Manque le résumé de semaine de Pierre.

--- a/index.html
+++ b/index.html
@@ -423,14 +423,15 @@
             <li><b>Lucas Duval</b></li>
             <ul>
               <p>
-                Aujourd’hui, j’ai fini l’écriture du <a href="./img/BusinessModel.pdf" target="_blank">business model</a>, réfléchis à toutes les options de rémunération et de minimisation de déficits. J’ai soutenu Steven sur le motion design pour qu’il puisse avoir un avis neuf sur la vidéo promotionnelle.<br>
+                Aujourd’hui, j’ai fini l’écriture du <a href="./img/BusinessModel.pdf" target="_blank">business model</a>, réfléchis à toutes les options de rémunération et de minimisation de déficits. J’ai soutenu Steven sur le motion design pour
+                qu’il puisse avoir un avis neuf sur la vidéo promotionnelle.<br>
                 J’ai également corrigé chaque fautes d’orthographe des maquettes pour y avoir un côté professionnel.
               </p>
             </ul>
             <li><b>Pierre Moinet</b></li>
             <ul>
               <p>
-                <i>En attente</i>
+                Aujourd'hui, j'ai finalisé l'App web en travaillant sur le front, donc les formulaires, affichage des voyages et des étapes. J'ai également dû faire apparaître des portions de HTML en fonction de certaines conditions.
               </p>
             </ul>
             <li><b>Adrien Sanuy-Muñoz</b></li>
@@ -462,7 +463,9 @@
           <li><b>Lucas Duval</b></li>
           <ul>
             <p>
-              Ce projet fut très intense, nous avons réalisé l’équivalent de 2 voir 3 semaines de travail en 5 jours chrono. Ce fut fatiguant, mais cela nous a montré à quel point nous pouvions être efficace, aussi bien sur le profil personnel que sur le profil collectif. En équipe de 4, nous avons pu couvrir tous les domaines ou presque de la création d’une application web, de la conception à la production. Tout autant sur l’aspect humain, communication, budgétaire, graphique que développement (Back et Front).<br>
+              Ce projet fut très intense, nous avons réalisé l’équivalent de 2 voir 3 semaines de travail en 5 jours chrono. Ce fut fatiguant, mais cela nous a montré à quel point nous pouvions être efficace, aussi bien sur le profil personnel que
+              sur le profil collectif. En équipe de 4, nous avons pu couvrir tous les domaines ou presque de la création d’une application web, de la conception à la production. Tout autant sur l’aspect humain, communication, budgétaire, graphique
+              que développement (Back et Front).<br>
               Je pense pouvoir affirmer que nous sommes tous très fier de ce que l’on a produit.<br>
               Ce travail n’était pas un simple projet scolaire, mais réellement un travail approfondi, avec le fruit de réflexion de 4 cerveaux d’étudiants dans le multimédia.<br>
             </p>
@@ -476,17 +479,27 @@
           <li><b>Adrien Sanuy-Muñoz</b></li>
           <ul>
             <p>
-              J’ai apprécié travailler avec cette équipe car elle est dynamique et n’a pas peur de rendre un produit complexe et design. Chacun de nous avait un poste attribué et tout s’est bien passé. Ce que je trouve dommage c’est d’avoir réaliser ce projet en 1 semaine avec énormément de demandes. J’aurai préféré le réaliser en 2, 3 semaines pour ne pas rendre un travail non aboutie.<br>
+              J’ai apprécié travailler avec cette équipe car elle est dynamique et n’a pas peur de rendre un produit complexe et design. Chacun de nous avait un poste attribué et tout s’est bien passé. Ce que je trouve dommage c’est d’avoir réaliser
+              ce projet en 1 semaine avec énormément de demandes. J’aurai préféré le réaliser en 2, 3 semaines pour ne pas rendre un travail non aboutie.<br>
               En soit le projet m’a beaucoup plus. Il y a de la recherche derrière tout ça et ce n’est pas qu’une simple application qu’un professeur nous à demander de faire. C’est une innovation !
             </p>
           </ul>
           <li><b>Steven Roussel</b></li>
           <ul>
             <p>
-              <i>En attente</i>
+              Cette semaine fut vraiment intense.<br>
+              Nous avons beaucoup travaillé et dans divers univers, du graphisme au développement. Personnellement, je me suis beaucoup plus impliqué que prévu dans le graphisme, ce qui fut très intéressant.
+              Je suis assez fier de ce que nous avons produit, la fatigue est présente, le stress l’était également, mais c’est soulagé et heureux que nous allons attaquer le week-end.<br>
+              L’application fonctionne assez bien, certes elle est assez primaire mais la base est bonne et elle fait correctement ce qu’on lui demande de faire. Les maquettes et autres rendus graphiques (Publicité et affiches) sont également très
+              sympa je trouve.<br>
+              Bref, la semaine se finit bien, mais je pense malgré tout qu’il serait intéressant de prévoir plus d’heure (de cours) sur ce projet, car nous sommes malgré tout frustré à certains égard.
+
             </p>
           </ul>
         </ul>
+      </div>
+    </div>
+  </div>
 
   <div class="row center-xs">
     <div class="col-xs-12 col-sm-8">
